# motion-detection-tcp

./: .gitignore  CMakeLists.txt  Makefile  README.md  client  desktop.ini
include/motion-detection-tcp/: button.h  image-processor.h  jpg-receive-save-utils.h  linux-send-receive.hpp  send-receive-interface.h  server-communication.h  tcp-protocol.h
libs/motion-detection/: tcp_protocol.h
src/: Makefile  button.cpp  client.cpp  common.h  image-processor.cpp  image-utils.cpp  image-utils.h  jpg-receive-save-utils.cpp  jpg-receive-save-utils.h  protocol.h  server-communication.cpp  server.cpp  stb-image-write.cpp  stb_image_write.cpp  tcp-client-image-receiver.cpp  tcp-client-image-receiver.h
src/button/: button.cpp  button.h
src/client_directory/: client.cpp  jpg-receive-save-utils.cpp  jpg-receive-save-utils.h  stb_image_write.cpp
src/communication/: image_processor.cpp  image_processor.h  server_communication.cpp  server_communication.cpp.save  server_communication.h
test/: CMakeLists.txt  ServerCommunicationTest.cpp
tests/: ImageProcessorTest.cpp  JpegReceiveTest.cpp  MockButton.h  MockImageProcessor.h  MockSendRecv.h  ServerCommunicationTest.cpp  StubSendRecvLogic.hpp
